[gd_scene load_steps=3 format=3 uid="uid://5pbjpvwntwqe"]

[ext_resource type="Script" path="res://scripts/editor/LevelEditor.gd" id="1_jel5f"]
[ext_resource type="PackedScene" uid="uid://cn1pfmba77kb1" path="res://scenes/editor/EditorUI.tscn" id="2_m4xht"]

[node name="LevelEditor" type="Node3D"]
script = ExtResource("1_jel5f")

[node name="EditorUI" parent="." instance=ExtResource("2_m4xht")]

[node name="EditorCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 15, 10)
projection = 1
current = true
size = 15.0
